Finished section on setting up Git. Started work on section covering installation/usage of NUnit.

--- a/book.tex
+++ b/book.tex
@@ -37,7 +37,7 @@ has any background in either computer science or mathematics. All jargon should 
 works the author has authored. If a programming text is to build on some assumed knowledge, it must explicitly define said knowledge from the 
 outset, and ought contain a ``Read First'' section. 
 
-Also, the volume of information forthcoming about new technologies—frameworks, toolkits, tooling, etc.—drowns out information about programming 
+Also, the volume of information forthcoming about new technologies---frameworks, toolkits, tooling, etc.---drowns out information about programming 
 well. By providing this text free of charge, holding ourselves to the highest standard of authorship and editorship, trying to make this text 
 accessible to all that might read it, and acting as stewards and care-takers of this living document, we hope to raise the bar for published 
 works pertaining to computer programming.
@@ -47,8 +47,11 @@ The examples included hereafter are executed in \CSharp and Microsoft.Net, but t
 \pagestyle{headings}
 \pagenumbering{arabic}
 
-% Setting Up Your Programming Environment
+% Setting Up A Programming Environment
 \include{setup}
+
+% Keeping It Classy
+\include{classy}
 
 \appendix
 % Appendix on Windows Administrative Tasks
