--- a/glossaryentries.tex
+++ b/glossaryentries.tex
@@ -121,3 +121,13 @@ description={An automated process whereby source code is built and tested contin
 }
 
 \newacronym[description={\glslink{ci}{Continuous Integration}}]{CI}{CI}{Continuous Integration}
+
+%GUI
+\newglossaryentry{gui}
+{
+name=\glslink{GUI}{Graphical User Interface},
+text=Graphical User Interface,
+description={Programs that are interacted with via interfaces that are rendered to the screen rather than through typing into a terminal window.}
+}
+
+\newacronym[description={\glslink{gui}{Graphical User Interface}}]{GUI}{GUI}{Graphical User Interface}
