--- a/tools.tex
+++ b/tools.tex
@@ -3,10 +3,14 @@
 \chapter{Tools}\label{tools}
 \section{Text-editors}\label{text-editors}
 \subsection{CLI}
-gvim
-edit (ships with Windows)
+\begin{itemize}
+\item gvim
+\item edit (ships with Windows)  
+\end{itemize}
 
 \subsection{GUI}
-Notepad++
-GVim
-notepad.exe (ships with Windows)    
+\begin{itemize}
+\item Notepad++
+\item GVim
+\item notepad.exe (ships with Windows)
+\end{itemize}  
