First failing test for config chapter.

--- a/book.tex
+++ b/book.tex
@@ -58,6 +58,9 @@ The examples included hereafter are executed in \CSharp and Microsoft.Net, but t
 % Keeping It Classy
 \include{chapters/classy/classy}
 
+% Configuration
+\include{chapters/config/config}
+
 \appendix
 % Appendix on Windows Administrative Tasks
 \include{appendicies/windows-admin}
