Got first test for transport config section passing. Did some light housekeeping. Updated test library build file to use <exec> to run NUnit.

--- a/book.tex
+++ b/book.tex
@@ -63,10 +63,13 @@ The examples included hereafter are executed in \CSharp and Microsoft.Net, but t
 
 \appendix
 % Appendix on Windows Administrative Tasks
-\include{appendicies/windows-admin}
+\include{appendicies/windows-admin/windows-admin}
 
 % Appendix on Tools
-\include{appendicies/tools}
+\include{appendicies/tools/tools}
+
+% Appendix on nRake
+\include{appendicies/nrake/nrake}
 
 \printglossaries
 
